add get public address route (#30)
